--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "framer-motion": "^12.23.24",
     "hls.js": "^1.6.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.4.1",
     "socket.io-client": "^4.8.1",
